src/objects/c2g__ChartOfAccountsMapping__c.object
<CustomObject>
    <customHelpPage>c2g__helpchartofaccountsmapping</customHelpPage>
    <fields>
        <fullName>c2g__CorporateGLA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Corporate GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA and be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mappings (Corporate GLA)</relationshipLabel>
        <relationshipName>ChartOfAccountsMappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mappings</relationshipLabel>
        <relationshipName>ChartOfAccountsMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mappings</relationshipLabel>
        <relationshipName>ChartOfAccountsMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mappings</relationshipLabel>
        <relationshipName>ChartOfAccountsMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalChartOfAccountsStructure__c</fullName>
        <formula>c2g__LocalGLA__r.c2g__ChartOfAccountsStructure__r.Name</formula>
        <label>Local Chart of Accounts Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mappings (Local GLA)</relationshipLabel>
        <relationshipName>ChartOfAccountsMappingsLocalGLA</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Chart of Accounts Mapping</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGM{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chart of Accounts Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>